// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination> that renders a pagination component should render correctly with all props 1`] = `
<Pagination
  currentPage={6}
  maxPageButtons={8}
  nextLabel="Next"
  onClick={[MockFunction]}
  prevLabel="Previous"
  totalPages={20}
>
  <nav
    aria-label="pagination"
    className="Pagination Pagination--align_center"
  >
    <Button
      aria-disabled={false}
      context="link"
      data-page={5}
      disabled={false}
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        className="Button Button--context_link"
        data-page={5}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        ‹ Previous
      </button>
    </Button>
    <PaginationButton
      data-page={1}
      isActive={false}
      key="page_1"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={1}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={1}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </Button>
    </PaginationButton>
    <div
      className="Pagination__gap"
    >
      …
    </div>
    <PaginationButton
      data-page={3}
      isActive={false}
      key="page_3"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={3}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={3}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          3
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={4}
      isActive={false}
      key="page_4"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={4}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={4}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          4
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={5}
      isActive={false}
      key="page_5"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={5}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={5}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={6}
      isActive={true}
      key="page_6"
      onClick={[Function]}
    >
      <Button
        aria-current="page"
        className="PaginationButton PaginationButton--isActive"
        context="link"
        data-page={6}
        onClick={[Function]}
      >
        <button
          aria-current="page"
          className="Button Button--context_link PaginationButton PaginationButton--isActive"
          data-page={6}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          6
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={7}
      isActive={false}
      key="page_7"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={7}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={7}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          7
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={8}
      isActive={false}
      key="page_8"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={8}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={8}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          8
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={9}
      isActive={false}
      key="page_9"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={9}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={9}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          9
        </button>
      </Button>
    </PaginationButton>
    <Button
      aria-disabled={false}
      context="link"
      data-page={7}
      disabled={false}
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        className="Button Button--context_link"
        data-page={7}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Next ›
      </button>
    </Button>
  </nav>
</Pagination>
`;

exports[`<Pagination> that renders a pagination component should render correctly with default props 1`] = `
<Pagination
  totalPages={20}
>
  <nav
    aria-label="pagination"
    className="Pagination Pagination--align_center"
  >
    <PaginationButton
      data-page={1}
      isActive={true}
      key="page_1"
      onClick={[Function]}
    >
      <Button
        aria-current="page"
        className="PaginationButton PaginationButton--isActive"
        context="link"
        data-page={1}
        onClick={[Function]}
      >
        <button
          aria-current="page"
          className="Button Button--context_link PaginationButton PaginationButton--isActive"
          data-page={1}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={2}
      isActive={false}
      key="page_2"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={2}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={2}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          2
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={3}
      isActive={false}
      key="page_3"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={3}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={3}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          3
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={4}
      isActive={false}
      key="page_4"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={4}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={4}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          4
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={5}
      isActive={false}
      key="page_5"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={5}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={5}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={6}
      isActive={false}
      key="page_6"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={6}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={6}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          6
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={7}
      isActive={false}
      key="page_7"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={7}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={7}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          7
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={8}
      isActive={false}
      key="page_8"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={8}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={8}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          8
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={9}
      isActive={false}
      key="page_9"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={9}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={9}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          9
        </button>
      </Button>
    </PaginationButton>
    <PaginationButton
      data-page={10}
      isActive={false}
      key="page_10"
      onClick={[Function]}
    >
      <Button
        aria-current={null}
        className="PaginationButton"
        context="link"
        data-page={10}
        onClick={[Function]}
      >
        <button
          aria-current={null}
          className="Button Button--context_link PaginationButton"
          data-page={10}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          10
        </button>
      </Button>
    </PaginationButton>
  </nav>
</Pagination>
`;
